--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     crossorigin=""></script>
     <script type="text/javascript" src="static/js/config.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
   </body>
 </html>
