--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
   </head>
   <body>
@@ -17,6 +18,8 @@
     <script type="text/javascript" src="static/js/config.js"></script>
     <script type="text/javascript" src="static/js/dataVars.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/heatmap.js"></script>
+    <script type="text/javascript" src="static/js/choropleth.js"></script>
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
   </body>
 </html>
