--- a/D3/d3.html
+++ b/D3/d3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MT Test Chart</title>
+    <title>Vehicle Summary</title>
     <link rel="stylesheet" href="d3.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
@@ -11,17 +11,15 @@
       <div class="row">
         <div class="col-md-12 jumbotron text-center">
           <h1>2016 Georgia Traffic Stops</h1>
-          <h2>Vehicle Summary </h2>
+          <h2>Vehicle Summary</h2>
           <p>
             Question: Do certain vehicle colors or makes get pulled over more often?
           </p>
-          <!-- <div id="bar"></div> -->
           <div class="container_1">
             <div id="bar1">
               <!-- We append our chart here. -->
             </div>
           </div>
-          <!-- <div id="bar"></div> -->
           <div class="container_2">
             <div id="bar2">
               <!-- We append our chart here. -->
