--- a/D3/d3.html
+++ b/D3/d3.html
@@ -13,16 +13,16 @@
           <h1>2016 Georgia Traffic Stops</h1>
           <h2>Vehicle Summary</h2>
           <p>
-            Question: Do certain vehicle colors or makes get pulled over more often?
+            Do certain vehicle colors or makes get pulled over more often?
           </p>
           <div class="container_1">
             <div id="bar1">
-              <!-- We append our chart here. -->
+              <!-- append our chart here -->
             </div>
           </div>
           <div class="container_2">
             <div id="bar2">
-              <!-- We append our chart here. -->
+              <!-- append our chart here -->
             </div>
           </div>
         </div>
